trunk/Archive2/68/7e8ecf0761e29c/output
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/string:40,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h: In instantiation of 'static _OI std::__copy_move<true, false, std::random_access_iterator_tag>::__copy_m(_II, _II, _OI) [with _II = char*; _OI = std::move_iterator<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >]':
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:396:70:   required from '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = true; _II = char*; _OI = std::move_iterator<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:434:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = true; _II = __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >; _OI = std::move_iterator<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >]'
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:466:17:   required from '_OI std::copy(_II, _II, _OI) [with _II = std::move_iterator<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >; _OI = std::move_iterator<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >]'
main.cpp:64:122:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:355:18: error: using xvalue (rvalue reference) as lvalue
        *__result = std::move(*__first);
                  ^
